# python-libsword

./: .gitignore  .pre-commit-config.yaml  README.md  Sword.cxx  Sword.h  Sword.py  mypy.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
tests/: test_something.py
