[metadata]
name = libsword
url = https://www.crosswire.org/sword/
project_urls =
    Bug Tracker = https://github.com/greg-hellings/libsword/issues
    Release Management = https://github.com/greg-hellings/libsword/releases
    CI = https://github.com/greg-hellings/libsword/actions
    Source Code = https://github.com/greg-hellings/libsword
description = Python bindings for the SWORD library, extracted from that source
long_description = file: README.md
long_description_content_type = text/markdown
author = Greg Hellings
author_email = greg.hellings@gmail.com
maintainer = Greg Hellings
maintainer_email = greg.hellings@gmail.com
license = GPLv2
; license_file = LICENSE
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
keywords =
    python
    sword
    crosswire

[options]
use_scm_version = True
python_requires = >=3.6
py_modules = Sword
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
